# ci-poseidon

./: .gitignore  PAPER.md  README.md  benchmark_test.go  ci-poseidon.aux  ci-poseidon.bbl  ci-poseidon.bib  ci-poseidon.blg  ci-poseidon.tex  ci-poseidonol.tex  ci_plonky3_lib.rs  ci_poseidon.go  ci_poseidon_test.go  circle_code_test.go  circom_export.go  circom_test.go  fifth_horseman_test.go  gnark_bench_test.go  go.mod  goldilocks_symmetry_test.go  horsemen_test.go  mds.go  mds_test.go  package-lock.json  package.json  permutation.go  permutation_test.go  plonk_bench_test.go  snarkjs_test.js  sponge.go  sponge_test.go  symmetry_mds.go  symmetry_mds_extended_test.go  symmetry_mds_test.go
circuits/: ci_poseidon.circom  ci_poseidon_t2_bn254.circom  ci_poseidon_t2_bn254.r1cs  ci_poseidon_t2_bn254.sym  ci_poseidon_t3_bn254.circom  ci_poseidon_t3_bn254.r1cs  ci_poseidon_t3_bn254.sym  ci_poseidon_t4_bn254.circom  ci_poseidon_t4_bn254.r1cs  ci_poseidon_t4_bn254.sym  ci_poseidon_t6_bn254.circom  ci_poseidon_t6_bn254.r1cs  ci_poseidon_t6_bn254.sym  verification_key_t2.json  verification_key_t3.json  verification_key_t4.json  verification_key_t6.json
circuits/ci_poseidon_t2_bn254_js/: ci_poseidon_t2_bn254.wasm
stark/: Cargo.toml  lib.rs
stark/benches/: permutation.rs
trusted_setup/: ci_poseidon_t2_bn254_0.zkey  ci_poseidon_t2_bn254_final.zkey  ci_poseidon_t3_bn254_0.zkey  ci_poseidon_t3_bn254_final.zkey  ci_poseidon_t4_bn254_0.zkey  ci_poseidon_t4_bn254_final.zkey  ci_poseidon_t6_bn254_0.zkey  ci_poseidon_t6_bn254_final.zkey
(+3 files in other folders)
